HTML elements exercise
Within the Codeup folder on your Desktop, open your file named hello_world.html.
Add an empty <div> inside the body with an id attribute of "wrapper".
Add two paragraphs with a sentence in each. The first paragraph can be something about your favorite vacation spot. The second paragraph about your favorite actor.
Add a <span> around the first word in your first sentence.
Add a break <br> somewhere in your second paragraph.

--- a/hello_world.html
+++ b/hello_world.html
@@ -5,5 +5,13 @@
     </head>
     <body>
         <p> Hello from Codeup! </p>
+        
+        <div id="wrapper">
+            
+        </div>
+
+        <p> <span> I  </span> like  hiking in the Red Rock Canyons. </p>
+        <br>
+        <p> I enjoy watching Keanu Reeves <br> in action movies </br></p>
     </body>
 </html>
