--- a/hello_world.html
+++ b/hello_world.html
@@ -4,6 +4,9 @@
         <title> First of Many </title>
     </head>
     <body>
+        <h1> Hello World </h1>
+        <h2> Hello World </h2>
+        <h3> Hello World </h3>
         <p> Hello from Codeup! </p>
         
         <div id="wrapper">
