Paragraphs and more
Open the hello_world.html file in your favorite editor.
Below the "hello world" heading, create a paragraph introducing yourself and telling some fun facts about yourself. Use emphasis, strong emphasis, and line break elements within the paragraph.
Below the paragraph, create a level 2 heading that says: "My Favorite Quote". Below that heading, use the block quote element and paste in your favorite quote.
View the result in your web browser by dragging the hello_world.html file from your Codeup folder directly into your browser window.

--- a/hello_world.html
+++ b/hello_world.html
@@ -5,8 +5,11 @@
     </head>
     <body>
         <h1> Hello World </h1>
-        <h2> Hello World </h2>
-        <h3> Hello World </h3>
+        
+        <p> <strong> I have a combined 11 years in industrial maintenance experience. <br> I enjoyed the work I did. </strong></p>
+
+        <h2><blockquote>Game over man!</blockquote></h2>
+
         <p> Hello from Codeup! </p>
         
         <div id="wrapper">
