--- a/hello_world.html
+++ b/hello_world.html
@@ -8,7 +8,29 @@
         
         <p> <strong> I have a combined 11 years in industrial maintenance experience. <br> I enjoyed the work I did. </strong></p>
 
-        <h2><blockquote>Game over man!</blockquote></h2>
+        <h2><blockquote> Game over man! </blockquote></h2>
+        <h2>  "I'm Learning the LAMP Stack".</h2>
+            <ul>
+                <li> Linux </li>
+                <li> Apache </li> 
+                <li> MySQL </li>
+                <li> PHP </li>
+        <h2> My Top 5 Favorite Foods </h2>
+            <ol>
+
+                <li> Pizza </li>
+                <li> Burgers </li>
+                <li> Chicken </li>
+                <li> Thai BBQ </li>
+                <li> Steak </li>
+            </ol>
+        <h2> Questions I'm Often Asked </h2>
+            <dl>
+                <dt> What did I do in the Navy? </dt>
+                <dd> Worked on the ship's weapons system. </dd>
+                <dt> Where was I stationed? </dt>
+                <dd> Pearl Harbor </dd>
+
 
         <p> Hello from Codeup! </p>
         
