--- a/hello_world.html
+++ b/hello_world.html
@@ -41,5 +41,16 @@
         <p> <span> I  </span> like  hiking in the Red Rock Canyons. </p>
         <br>
         <p> I enjoy watching Keanu Reeves <br> in action movies </br></p>
+
+        <h2> My Favorite Websites </h2>
+            <ol>
+
+                <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+                <li><a href="https://www.handcrafttailor.com/" target="_blank">Handcraft Tailor</a></li>
+                <li><a href="https://movsd.com/BespokeCutter/index.php" target="_blank">Bespoke Cutter and Tailor</a></li>
+                <li><a href="https://www.ebay.com/" target="_blank">Ebay</a></li>
+                <li><a href="https://www.imdb.com/" target="_blank">IMBD</a></li>
+            </ol>
+        <a href="#top">Go to the top of the page</a>
     </body>
 </html>
