--- a/my_first_form.html
+++ b/my_first_form.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
 
+<title>For the New Exercise</title>
+
+</head>
+<body>
+
+<form method="POST" action="http://request-inspector.glitch.me/">
+    <div>
+        <label for="username">Username</label>
+        <input id="username" name="username" type="text">
+    </div>
+    <div>
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password">
+    </div>
+    <div>
+        <input type="submit">
+    </div>
+</form>
+
+<form method="POST" action="https://request-inspector.glitch.me">
+	
+</body>
+</html>
