Input and Submitting Exercise
1.Open the my_first_form.html file in your favorite editor.

2.Add placeholder attributes with appropriate values to both the username and passwordinputs.

3.Try adding a name attribute to the <input type="submit>.

4.Submit the form as a POST request and view the results in your browser.

5.Add a value attribute to the <input type="submit> to change the button to say "Login".

6.Try submitting the form and view the results in your browser.
Replace the <input type="submit> with a <button> element and try submitting the form.
From the browser, view the results.

--- a/my_first_form.html
+++ b/my_first_form.html
@@ -21,7 +21,18 @@
     </div>
 </form>
 
+<div>
 <form method="POST" action="https://request-inspector.glitch.me">
-	
+</div>
+
+<br>
+
+<input type="text" id="username" name="username" placeholder="Enter your username">
+
+<button type="submit">Login</button>
+</div
+
+
+
 </body>
 </html>
