Text and Textera Exercise
1.Add a new form below the existing form.

2.Add inputs to the form that would allow a user to compose an email (to, from, subject, body, and a send button). Make sure to use the appropriate input types for each form element.

3.Put headings above the forms. Label the first form as "User Login", and the second form as "Compose an Email".
When complete, try submitting the new form and viewing the results on on both your file and your RequestBin pag

--- a/my_first_form.html
+++ b/my_first_form.html
@@ -21,18 +21,32 @@
     </div>
 </form>
 
-<div>
 <form method="POST" action="https://request-inspector.glitch.me">
-</div>
 
 <br>
+<div>
 
 <input type="text" id="username" name="username" placeholder="Enter your username">
 
 <button type="submit">Login</button>
-</div
+</div>
 
+<br>
+<div>
 
+<div>
+        <label for="username">User Login</label>
+        <input id="username" name="username" type="text">
+</div>
+
+<br>
+
+<div>
+        <label for="username">Compose Email</label>
+
+<textarea id="email_body" name="email_body">Content Here</textarea>
+
+</div>
 
 </body>
 </html>
