--- a/Css/css_intro.html
+++ b/Css/css_intro.html
@@ -2,7 +2,7 @@ a<!DOCTYPE html>
 <html>
 <head>
     <title>CSS Test Page</title>
-    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="site.css">
 </head>
 <body>
     <h1 class="fancy-header">I've got style!</h1>
