CSS Properties Exercise
1.Open up your hello_world.html file from your Codeup folder.

2.Add a style to change the color of the headers on your page and make them underlined.

3.Add a style to change the background color of the page.
Add a style to add a background image to your page. Search how to manipulate the position, sizing of this background image.

4.Add a style to change the list-style to something other than the default bullet.

5.Add a style to change the font for the entire page. Use google fonts if you would like Google Fonts.

6.Add a style to change the table, table cells td and rows tr padding and font sizes.

7.Add a style to alter the anchor tags and its different states. (e.g. link, visited, hover and active).

--- a/hello_world.html
+++ b/hello_world.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>CSS Test Page</title>
+        <link rel="stylesheet" href="css/site.css">
         <title> First of Many </title>
     </head>
     <body>
+         
         <h1> Hello World </h1>
         
         <p> <strong> I have a combined 11 years in industrial maintenance experience. <br> I enjoyed the work I did. </strong></p>
