Box Model Exercise
Will resume at a later time.

--- a/Css/css_box_model.html
+++ b/Css/css_box_model.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Box Model Exercise</title>
-    <link rel="stylesheet" href="css/box_model.css">
+    <link rel="stylesheet" href="css/site.css">
 </head>
 
 <body>
@@ -13,6 +13,6 @@
 	<div>6495-570 nm</div>
 	<div>450-495 nm</div>
 	<div>380-450 nm</div>
-	<div id="box-red" class="box">620-750 nm>
+	<div id="box-red" class="box">620-750
 
 </body>
