--- a/css_box_model.html
+++ b/css_box_model.html
@@ -6,13 +6,12 @@
 </head>
 
 <body>
-	<h1>Visible Spectrum Wavelengths</h1>
-	<div>620-750 nm</div>
-	<div>520-620 nm</div>
-	<div>570-590 nm</div>
-	<div>6495-570 nm</div>
-	<div>450-495 nm</div>
-	<div>380-450 nm</div>
-	<div id="box-red" class="box">620-750 nm>
+	<h1><a href=https://en.wikipedia.org/wiki/Visible_spectrumVisible>Spectrum Wavelengths</a></h1>
+	<div id="box-red" class ="box">620-750 nm</div>
+	<div id="box-orange" class ="box">520-620 nm</div>
+	<div id="box-yellow" class ="box">570-590 nm</div>
+	<div id="box-green" class ="box">6495-570 nm</div>
+	<div id="box-blue" class ="box">450-495 nm</div>
+	<div id="box-violet" class ="box">380-450 nm</div>
 
 </body>
