--- a/Css/css_positioning.html
+++ b/Css/css_positioning.html
@@ -2,45 +2,45 @@
 <html>
 <head>
 <title>Positioning Exercises</title>
-    <link rel="stylesheet" href="css/box_model.css">
-   
+    <link rel="stylesheet" href="positioning.css">
+
 </head>
 
 <body>
 	<h1><a href=https://en.wikipedia.org/wiki/Visible_spectrumVisible>Spectrum Wavelengths</a></h1>
 	
 	<div id="box-red" class ="box">
-
+		<Img src="codeup-arrow.png">
 		620-750 nm
 
 	</div>
 	
 	<div id="box-orange" class ="box">
-
+		<Img src="codeup-arrow.png">
 		520-620 nm
 
 	</div>
 	
 	<div id="box-yellow" class ="box">
-
+		<Img src="codeup-arrow.png">
 		570-590 nm
 
 	</div>
 	
 	<div id="box-green" class ="box">
-
+		<Img src="codeup-arrow.png">
 		495-570 nm
 
 	</div>
 	
 	<div id="box-blue" class ="box">
-
+		<Img src="codeup-arrow.png">
 		450-495 nm
 
 	</div>
 	
 	<div id="box-violet" class ="box">
-
+		<Img src="codeup-arrow.png">
 		380-450 nm
 
 	</div>
