Javascript with HTML exercise
1.Within the Codeup folder on your Mac, create two HTML files. Name one inline_js.html, and the other external_js.html.

2.Create a folder named js in the same location as the html files you created.
Inside the js folder, create a file named external.js.

3.Use the sample code from this lesson to fill in the html files with the appropriate code.

4.Add a console.log message in inline_js.html that says "Hello from inline JavaScript".

5.Add a console.log message in external.js that says "Hello from external JavaScript".

6.Open the html files and view the JavaScript Console to make sure you see your messages.

--- a/inline_js.html
+++ b/inline_js.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Inline JS</title>
+</head>
+<body>
+    <script>
 
+    	"use strict";
+
+	console.log('Hello from JavaScript!');
+
+    </script>
+</body>
+</html>
