--- a/iterating_arrays_js.html
+++ b/iterating_arrays_js.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Inline JS</title>
+    </head>
+
+    <body>
+    
+        <script>
+
+	    // TODO: Create an array of 4 people's names using literal array notation, in a variable called 'names'.
+
+        var names = ['jon', 'jane', 'jack', 'joe'];
+
+	    // TODO: Create a log statement that will log the number of elements in the names array.
+
+        console.log("there are " + names.length + " names in the names array.");
+
+	    // TODO: Create log statements that will print each of the names array elements individually.
+
+	    console.log("The first name is " + names [0]);
+	    console.log("The second name is " + names [1]);
+	    console.log("The third name is " + names [2]);
+	    console.log("The fourth name is " + names [3]);
+
+        </script>
+
+    </body>
+    
+</html>
 
