--- a/iterating_arrays_js.html
+++ b/iterating_arrays_js.html
@@ -16,12 +16,9 @@
 
         console.log("there are " + names.length + " names in the names array.");
 
-	    // TODO: Create log statements that will print each of the names array elements individually.
-
-	    console.log("The first name is " + names [0]);
-	    console.log("The second name is " + names [1]);
-	    console.log("The third name is " + names [2]);
-	    console.log("The fourth name is " + names [3]);
+	    names.forEach(function (element, index, array ) {
+	    		console.log("name at index: " + index + " is " + element);
+	    });
 
         </script>
 
