--- a/user-interaction.html
+++ b/user-interaction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Inline JS</title>
+        <title>User Interactions</title>
     </head>
 
     <body>
